# python-serverless-mono-repo

./: .gitignore  README.md  notes.md
libs/lib-one/lib_one/: main.py
libs/lib_one/: pyproject.toml
project-two/: main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  serverless.yml  serverless_tmp.yml
project-two/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
